@@ -24,6 +24,7 @@ load-plugins=
     pylint.extensions.overlapping_exceptions,
     pylint.extensions.typing,
     pylint.extensions.redefined_variable_type,
+    pylint.extensions.comparison_placement,
 
 # Use multiple processes to speed up Pylint.
 jobs=1
